tests/errors/zone-pointer-after-if-reset.ari
fn main() -> i64 {
  var zone = zone::create(64);
  let item = zone::new<i64>(ref mut zone, 5);
  if 1 {
    zone::reset(ref mut zone);
  }
  let value = *item;
  zone::destroy(zone);
  value
}
